--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".users.activities.RegisterToSeller"
+            android:name=".users.activities.RegisterToWriter"
             android:exported="false" />
         <activity
             android:name=".users.activities.ForgotPasswordActivity"
