--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,10 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".users.activities.RegisterToWriter"
+            android:name=".users.activities.RegisterToWriterActivity"
             android:exported="false" />
         <activity
             android:name=".users.activities.ForgotPasswordActivity"
-            android:exported="false" />
-        <activity
-            android:name=".tips.TipReportActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -58,19 +55,10 @@
         <activity
             android:name=".users.activities.SignUpActivity"
             android:exported="false" />
+        <!-- Add the missing UserProfileActivity declaration -->
         <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
-
+            android:name=".users.activities.UserProfileActivity"
+            android:exported="true" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
