--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".admin.activities.AdminMainActivity" />
+        <activity android:name=".tips.TipDetailActivity" />
         <activity android:name=".tips.WriteTipActivity" />
         <activity
             android:name=".users.activities.SignInActivity"
@@ -55,6 +56,7 @@
         <activity
             android:name=".users.activities.SignUpActivity"
             android:exported="false" />
+
         <!-- Add the missing UserProfileActivity declaration -->
         <activity
             android:name=".users.activities.UserProfileActivity"
